--- a/foldr py2/templates/login.html
+++ b/foldr py2/templates/login.html
@@ -1,6 +1,6 @@
 <form method="POST">
-   <input name="us"  placeholder="username">
-   <input name="ps"  placeholder="password">
+   <input name="us"  type="text" placeholder="username">
+   <input name="ps"  type="hidden" placeholder="password">
    <input name="email" type="email" placeholder="email">
    <button type="submit"> Login </button>
 </form>
